# wies

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .env.prod.example  .env.worker.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  Dockerfile  README.md  REVIEW_CHECKLIST.md  SECURITY.md  USER_COLLEAGUE_ANALYSIS.md  backup_placement_templates.txt  convert_templates.py  cookies.txt  docker-compose.yml  docker-entrypoint.sh  dummy_data.json  exact_dummy_data.json  justfile  manage.py  package-lock.json  package.json  plan-nldd-migration.md  postgresql.md  profile-pictures-remaining.md  pyproject.toml  requirements.txt  rijksprofielservice-poc-implementation-plan.md  test_search.py
.claude/: CLAUDE.md  mcp.json  settings.json
.claude/agents/: ui-builder.md
.claude/rules/: claude-code.md  code-style.md  models.md  security.md  testing.md  ux-accessibility.md
.claude/skills/django/: SKILL.md
.claude/skills/jinja-roos-components/: SKILL.md  components.md
.claude/skills/model-workflow/: SKILL.md
.claude/skills/planning-workflow/: SKILL.md
.claude/skills/wies-domain/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  labeler.yml  main-deploy.yml  pr-cleanup.yml  pr-preview.yml  pr-registry-gc.yml  production-deploy.yml  security-scan.yml  staging-deploy.yml  test.yml
PDR/: 0001-contracturen-en-opdrachturen.md  0001-historische-opdrachten-opt-in.md  0002-historische-opdrachten-opt-in.md  template.md
config/: asgi.py  jinja2.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py  worker.py
docker/: Dockerfile  cron-entrypoint.sh  crontab
docs/: beheer.md  privacy.md
features/: inline-editing.md  ip_logging_events.md
js_tests/: tree_state.test.js
organization_analysis/: README.md  analyze_organizations.py  generate_hierarchy.py  hierarchy.json  oo-export-2.6.11.xsd  visualize.html
scripts/: build-ndd.mjs  build-nldd.mjs  generate_dummy_data.py  mattermost_bot_test.py
src/: manage.py
src/projects/: admin.py  forms.py  models.py  views.py
src/projects/migrations/: 0001_initial.py  0002_colleague.py  0003_assignment_project_colleagues.py  0004_project_status.py  0005_project_end_date_project_extra_info_and_more.py  0006_alter_project_colleagues_alter_project_end_date_and_more.py  0007_alter_project_organization_alter_project_start_date.py  0008_project_desired_skills.py  0009_rename_desired_skills_project_skills.py  0010_remove_colleague_function_colleague_skills.py  0011_assignments_and_jobs.py
src/projects/static/: custom.css
src/projects/templates/: assignment_delete.html  assignment_detail.html  assignment_new.html  assignment_update.html  base.html  client_detail.html  colleague_delete.html  colleague_detail.html  colleague_list.html  colleague_new.html  colleague_update.html  colleagues.html  colleagues_new.html  job_delete.html  job_detail.html  job_list.html  job_new.html  job_update.html  placement_detail.html  placement_new.html  project-overview.html  project_delete.html  project_detail.html  project_list.html  project_new.html  project_table.html  project_update.html  project_update_minimal.html  projects.html  projects_new.html  rvo_form_layout.html
src/wies/: asgi.py  settings.py  urls.py
wies/core/: admin.py  apps.py  auth_backend.py  context_processors.py  errors.py  fields.py  form_mixins.py  forms.py  middleware.py  models.py  org_picker.py  permission_engine.py  permission_rules.py  permissions.py  placement_visibility.py  prose.py  public_id.py  querysets.py  request_meta.py  roles.py  signals.py  tests.py  views.py  widgets.py
wies/core/editables/: __init__.py  assignment.py  colleague.py  placement.py  service.py  user.py
wies/core/fixtures/: base_dummy_data.json  dummy_data.json  (+1 more)
wies/exact/: admin.py  apps.py  models.py  urls.py  views.py
wies/projects/: admin.py  api.py  apps.py  auth_backend.py  context_processors.py  forms.py  models.py  permissions.py  querysets.py  tests.py  views.py
wies/rijksauth/: README.md  admin.py  apps.py  auth_backend.py  middleware.py  models.py  views.py
(+704 files in other folders)
