[project]
name = "wies"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
  "django==5.2.9",
  "whitenoise==6.11.0",
  "gunicorn==23.0.0",
  "Authlib==1.6.6",
  "requests==2.32.5",
  "urllib3>=2.6.0",  # CVE-2025-66418, CVE-2025-66471
  "jinja2==3.1.6",
  "jinja_roos_components@git+https://github.com/RijksICTGilde/jinja-roos-components.git@0.3",
]

[tool.setuptools]
py-modules = []

[tool.uv]
package = false
