[project]
name = "wies"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
  "django==5.2.9",
  "django_extensions==4.1",
  "whitenoise==6.11.0",
  "gunicorn==23.0.0",
  "Authlib==1.6.6",
  "requests==2.32.5",
  "jinja2==3.1.6",
  "jinja_roos_components@git+https://github.com/RijksICTGilde/jinja-roos-components.git@0.3",
]

[tool.setuptools]
py-modules = []

[tool.uv]
package = false
